@startuml

title __ENTITIES's Class Diagram__\n

      class fourcats.entities.Action {
          - name : String
          - param : List<ObjectParam>
          - scenario : String
          - step : String
          + Action()
          + Action()
          + Action()
          + addObjectParam()
          + getName()
          + getObjectParams()
          + getScenario()
          + getStep()
          + getType()
          + removeObjectParam()
          + setName()
          + setType()
          + setType()
          + toString()
      }


  

      class fourcats.entities.Actor {
          - lAction : List<Action>
          - name : String
          + Actor()
          + Actor()
          + addAction()
          + addActions()
          + getActions()
          + getActionsByName()
          + getName()
          + setName()
          + toString()
      }

  

      class fourcats.entities.Bal {
          - lActors : List<Actor>
          + BAL()
          + addUserToBAL()
          + getActors()
          + toString()
      }

  

      class fourcats.entities.Bdl {
          - nameBdl : String
          - nouns : LinkedList<WordCounter>
          - predicates : LinkedList<WordCounter>
          - verbs : LinkedList<WordCounter>
          + Bdl()
          + Bdl()
          + addNoun()
          + addPredicate()
          + addVerb()
          + getName()
          + getNouns()
          + getPredicates()
          + getVerbs()
          + removeNoun()
          + removePredicate()
          + removeVerb()
          + storeBdlNoun()
          + storeBdlPredicate()
          + storeBdlVerb()
          + toString()
          - order()
      }


      class fourcats.entities.ObjectParam {
          - name : String
          - required : boolean
          + ObjectParam()
          + ObjectParam()
          + getName()
          + getType()
          + isRequired()
          + setName()
          + setRequired()
          + setType()
          + setType()
          + toString()
      }


      class fourcats.entities.Scenario {
          - actorName : String
          - content : String
          - featureName : String
          - mAction : Map<Integer, Action>
          - name : String
          + Scenario()
          + getActions()
          + getActionsMap()
          + getActorName()
          + getContent()
          + getFeatureName()
          + getName()
      }



      class fourcats.entities.Type {
          - mAttributes : Map<String, String>
          - name : String
          + Type()
          + Type()
          + addAttribute()
          + getAttributes()
          + getName()
          + setName()
          + toString()
      }

  

  fourcats.entities.Action o-- fourcats.entities.Type : type
  fourcats.entities.ObjectParam o-- fourcats.entities.Type : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
